--- a/Sites/test_app/app/views/layouts/_footer.html.erb
+++ b/Sites/test_app/app/views/layouts/_footer.html.erb
@@ -1,13 +1,13 @@
 <footer class="footer">
 	<small>
-		<a href="http://railstutorial.org/">Rails Tutorial</a>
-		by Michael Hartl
+		<a href="http://railstutorial.org/">Compra.me</a>
+		by Gustavo Milstein
 	</small>
 	<nav>
 		<ul>
-			<li><%= link_to "About", about_path %></li>
-			<li><%= link_to "Contact", contact_path %></li>
-			<li><a href="http://news.railstutorial.org/">News</a></li>
+			<li><%= link_to "Acerca", about_path %></li>
+			<li><%= link_to "Contacto", contact_path %></li>
+			<li><a href="http://news.railstutorial.org/">Noticias</a></li>
 		</ul>
 	</nav>
 </footer>
